--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     </head>
 
-    <body>
+    <>
         <h1>L-System by TimKim</h1>
         <ul>
             <button onclick="window.location.href='trees.html'">Вперёд >></button>
@@ -28,8 +28,13 @@
             А если перед ней слева или справа есть фигура, то она может повернуться на 45 градусов "+" или "-"<br>
             и съесть её шагнув вперёд "F" [3].
         </p>
-        <img src="img/pawn.png" alt="Pawn L-System">
-
-    </body>
+        <div>
+            <ul>
+                <img class="pawn" src="img/pawn1.jpg" alt="Pawn F">
+                <img class="pawn" src="img/pawn2.jpg" alt="Pawn FF">
+                <img class="pawn" src="img/pawn3.jpg" alt="Pawn -F">
+            </ul>ul>
+        </div>
+        </body>
 
 </html>
