--- a/tree.html
+++ b/tree.html
@@ -20,7 +20,7 @@
 
                 <button class="btn btn-success"
                     onclick=" window.open('https://github.com/TimurKim/l-system_tree-01/blob/1072dcbb7b5fe225001250bdee66810f7884329f/sketch.js','_blank')">
-                    Google</button>
+                    Смотреть код</button>
             </li>
         </ul>
         <div id="canvas">
