--- a/tree.html
+++ b/tree.html
@@ -16,7 +16,7 @@
         <h1>L-System by TimKim</h1>
         <ul>
             <li>
-                <button onclick="window.location.href='/trees.html'">Назад</button>
+                <button onclick="window.location.href='trees.html'">Назад</button>
 
                 <button class="btn btn-success"
                     onclick=" window.open('https://github.com/TimurKim/l-system_tree-01/blob/1072dcbb7b5fe225001250bdee66810f7884329f/sketch.js','_blank')">
