--- a/trees.html
+++ b/trees.html
@@ -15,7 +15,7 @@
     <body>
         <h1>L-System by TimKim</h1>
         <ul>
-            <button onclick="window.location.href='/index.html'">
+            <button onclick="window.location.href='index.html'">
                 << Назад</button>
                     <button onclick="window.location.href='tree.html'">Вперёд >></button>
         </ul>
